INI COMMITAN GWEJH PERTAMA

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                <div class="col-md-6">
                   <h1 class="about_taital">Tentang Cafetaria</h1>
                   <p class="about_text">Ini adalah sebuah kantin kecil toko kecil yang menjual makanan ringan untuk umum di daerah gedung FTP UNIVERSITAS JEMBER</p>
-                  <div class="read_bt_1"><a href="#">Read More</a></div>
+                  <div class="read_bt_1"><a href="about.html">Read More</a></div>
                </div>
             </div>
          </div>
