--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
-                     <li class="nav-item active">
+                     <li class="nav-item ">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
@@ -53,8 +53,8 @@
                      <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blog</a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                     <li class="nav-item active">
+                        <a class="nav-link" href="contact.html">Contact</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
