--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
    <div class="header_section">
       <div class="container">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png" style="width: 20%;"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png " style="width: 80px;
+  height: 80px;
+  object-fit: cover;
+  display: block;
+  padding: 0;
+  margin: 0;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" style="justify-content: start;" id="navbarSupportedContent">
-               <ul class="navbar-nav me-3">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
                      <a class="nav-link" href="index.html">Home</a>
                   </li>
@@ -116,7 +121,8 @@
                      <div class="row d-flex align-items-center">
                         <div class="col-sm-6">
                            <h1 class="banner_taital">Es Wawan</h1>
-                           <p class="banner_text">Namanya aja Es Wawan bukan berarti es-nya Wawan yah, Lu panas-panasan di Jember mending beli aja es wawan serebuan suegerrrrr puooaaaal</p>
+                           <p class="banner_text">Namanya aja Es Wawan bukan berarti es-nya Wawan yah, Lu panas-panasan
+                              di Jember mending beli aja es wawan serebuan suegerrrrr puooaaaal</p>
                            <div class="started_text"><a href="#">Order Now</a></div>
                         </div>
                         <div class="col-sm-6">
@@ -132,7 +138,8 @@
                      <div class="row d-flex align-items-center justify-content-center">
                         <div class="col-sm-6">
                            <h1 class="banner_taital">Wafer Nabati</h1>
-                           <p class="banner_text">Wafer yang populer di Indonesia, terutama harga nya mulai 2rebuan aja. Ini enaks sih buat nemenin elo nugas laprak</p>
+                           <p class="banner_text">Wafer yang populer di Indonesia, terutama harga nya mulai 2rebuan aja.
+                              Ini enaks sih buat nemenin elo nugas laprak</p>
                            <div class="started_text"><a href="#">Order Now</a></div>
                         </div>
                         <div class="col-sm-6" style="margin-top: -60px;">
