--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <div class="header_section header_bg">
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <a class="navbar-brand"href="index.html"><img src="images/logo.png"></a>
+               <a class="navbar-brand"href="index.html"><img src="images/cafetaria-logo.png" style="width: 15%";></a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
@@ -57,10 +57,6 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                     <div class="login_bt"><a href="#">Login <span style="color: #222222;"><i class="fa fa-user" aria-hidden="true"></i></span></a></div>
-                     <div class="fa fa-search form-control-feedback"></div>
-                  </form>
                </div>
             </nav>
          </div>
@@ -72,58 +68,52 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="contact_main">
-                     <h1 class="contact_taital">Contact Us</h1>
+                     <h1 style="width: 300px;" class="contact_taital">Hubungi Kami</h1>
                      <form action="/action_page.php">
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Name" name="Name">
+                           <input type="text" class="email-bt" placeholder="Nama"name="Name">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Email" name="Name">
+                           <input type="text" class="email-bt" placeholder="Asal" name="Name">
                         </div>
                         <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
+                           <input type="text" class="email-bt" placeholder="No.HP" name="Email">
                         </div>
                         <div class="form-group">
-                           <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                           <textarea class="massage-bt" placeholder="Pesan" rows="5" id="comment" name="Massage"></textarea>
                         </div>
                      </form>
-                     <div class="main_bt"><a href="#">SEND</a></div>
+                     <div class="main_bt"><a href="#">Kirim</a></div>
                   </div>
                </div>
-               <div class="col-md-8">
+               <div style="margin:0px 0px 0px 0px;" class="col-md-8">
                   <div class="location_text">
                      <ul>
                         <li>
                            <a href="#">
-                           <span class="padding_left_10 active"><i class="fa fa-map-marker" aria-hidden="true"></i></span>Making this the first true</a>
+                           <span class="padding_left_10 active"><i class="fa fa-map-marker" aria-hidden="true"></i></span>jln. Kalimantan No. 37 – Kampus Tegalboto Kotak POS 159 Jember, Jawa Timur,</a>
                         </li>
                         <li>
                            <a href="#">
-                           <span class="padding_left_10"><i class="fa fa-phone" aria-hidden="true"></i></span>Call : +01 1234567890
+                           <span class="padding_left_10"><i class="fa fa-phone" aria-hidden="true"></i></span>Call : +62 81235296350
                            </a>
                         </li>
                         <li>
                            <a href="#">
-                           <span class="padding_left_10"><i class="fa fa-envelope" aria-hidden="true"></i></span>Email : demo@gmail.com
+                           <span class="padding_left_10"><i class="fa fa-envelope" aria-hidden="true"></i></span>Email : cafetaria@gmail.com
                            </a>
                         </li>
                      </ul>
                   </div>
-                  <div class="mail_main">
-                     <h3 class="newsletter_text">Newsletter</h3>
-                     <div class="form-group">
-                        <textarea class="update_mail" placeholder="Enter Your Email" rows="5" id="comment" name="Enter Your Email"></textarea>
-                        <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-                     </div>
-                  </div>
-                  <div class="footer_social_icon">
-                     <ul>
+                  <div style="text-align: left;" class="footer_social_icon">
+                     <ul style="list-style: none; padding: 0; display: flex; gap: 10px;">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                      </ul>
                   </div>
+                  
                </div>
             </div>
          </div>
