sudah semua menu contact

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                      <div class="main_bt"><a href="#">Kirim</a></div>
                   </div>
                </div>
-               <div style="margin:0px 0px 0px 0px;" class="col-md-8">
+               <div style="margin-top: 120px; padding-left: 60px;" class="col-md-8">
                   <div class="location_text">
                      <ul>
                         <li>
@@ -127,7 +127,8 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html Templates</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></p>
+            <p class="copyright_text">© 2025 Cafetaria Jember. Desain oleh Free HTML Templates. Distribusi oleh ThemeWagon.
+            </a></p>
          </div>
       </div>
       <!-- copyright section end -->
