--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="col-sm-6">
                            <h1 class="banner_taital">Beng Beng</h1>
                            <p class="banner_text">Beng Beng Enak kok, ukuran ini kecil yah</p>
-                           <div class="started_text"><a href="#">Order Now</a></div>
+                           <div class="started_text"><a href="#cream-section">Order Now</a></div>
                         </div>
                         <div class="col-sm-6">
                            <div class="banner_img">
@@ -106,7 +106,7 @@
                            <h1 class="banner_taital">Beng Beng Maxx</h1>
                            <p class="banner_text">Beng Beng Maxx Ukuran besar seperti namanya Maxx, kamu makan ini jadi
                               Looks Maxxing</p>
-                           <div class="started_text"><a href="#">Order Now</a></div>
+                           <div class="started_text"><a href="#cream-section">Order Now</a></div>
                         </div>
                         <div class="col-sm-6">
                            <div class="banner_img">
@@ -123,7 +123,7 @@
                            <h1 class="banner_taital">Es Wawan</h1>
                            <p class="banner_text">Namanya aja Es Wawan bukan berarti es-nya Wawan yah, Lu panas-panasan
                               di Jember mending beli aja es wawan serebuan suegerrrrr puooaaaal</p>
-                           <div class="started_text"><a href="#">Order Now</a></div>
+                           <div class="started_text"><a href="#cream-section">Order Now</a></div>
                         </div>
                         <div class="col-sm-6">
                            <div class="banner_img">
@@ -140,7 +140,7 @@
                            <h1 class="banner_taital">Wafer Nabati</h1>
                            <p class="banner_text">Wafer yang populer di Indonesia, terutama harga nya mulai 2rebuan aja.
                               Ini enaks sih buat nemenin elo nugas laprak</p>
-                           <div class="started_text"><a href="#">Order Now</a></div>
+                           <div class="started_text"><a href="#cream-section">Order Now</a></div>
                         </div>
                         <div class="col-sm-6" style="margin-top: -60px;">
                            <div class="banner_img">
@@ -172,7 +172,7 @@
             </div>
             <!-- about sectuion end -->
             <!-- cream sectuion start -->
-            <div class="cream_section layout_padding">
+            <div class="cream_section layout_padding" id="cream-section">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
