--- a/icecream.html
+++ b/icecream.html
@@ -82,27 +82,51 @@
             </div>
             <div class="cream_section_2">
                <div class="row">
-                  <div class="col-md-4">
+                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/rice.png"></div>
-                        <div class="price_text">$10</div>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/rice.png"></div>
+                        <div class="price_text">13k</div>
                         <h6 class="strawberry_text">Rice Bowl</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/lumpia.png"></div>
-                        <div class="price_text">$10</div>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/lumpia.png"></div>
+                        <div class="price_text">7K</div>
                         <h6 class="strawberry_text">Rolling Lumpia Beef</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                      </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/sempol.png"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Sempol</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                      </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/kripca.png"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Keripik Kaca</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/pudding.png"></div>
-                        <div class="price_text">$10</div>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/puding.png"></div>
+                        <div class="price_text">5K</div>
                         <h6 class="strawberry_text">Pudding Vla</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/wawan_es.png"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Es Wawan</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
@@ -112,25 +136,49 @@
                <div class="row">
                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/buah.png"></div>
-                        <div class="price_text">$10</div>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/buah.png"></div>
+                        <div class="price_text">6K</div>
                         <h6 class="strawberry_text">Buah Potong Cup</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/img-4.png"></div>
-                        <div class="price_text">$10</div>
-                        <h6 class="strawberry_text">Strawberry Ice Cream</h6>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/jus.png"></div>
+                        <div class="price_text">8K</div>
+                        <h6 class="strawberry_text">Jus Buah Segar</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="cream_box">
-                        <div class="cream_img"><img src="images/img-5.png"></div>
-                        <div class="price_text">$10</div>
-                        <h6 class="strawberry_text">Strawberry Ice Cream</h6>
+                        <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/kopi.png"></div>
+                        <div class="price_text">10K</div>
+                        <h6 class="strawberry_text">Coffee</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/bbeng.png"></div>
+                        <div class="price_text">2k</div>
+                        <h6 class="strawberry_text">Beng-Beng</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/bbeng_maxx.png"></div>
+                        <div class="price_text">3k</div>
+                        <h6 class="strawberry_text">Beng-Beng Maxx</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/nabati.png"></div>
+                        <div class="price_text">2k</div>
+                        <h6 class="strawberry_text">Nabati</h6>
                         <div class="cart_bt"><a href="#">Add To Cart</a></div>
                      </div>
                   </div>
