--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="icecream.html">Icecream</a>
