--- a/contact.html
+++ b/contact.html
@@ -1,146 +1,180 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <!-- basic -->
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>Contact</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-      <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
-      <!-- font css -->
-      <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
-      <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-      <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-   </head>
-   <body>
-      <div class="header_section header_bg">
-         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <a class="navbar-brand"href="index.html"><img src="images/cafetaria-logo.png " style="width: 80px;
+
+<head>
+   <!-- basic -->
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- mobile metas -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+   <!-- site metas -->
+   <title>Contact</title>
+   <meta name="keywords" content="">
+   <meta name="description" content="">
+   <meta name="author" content="">
+   <!-- bootstrap css -->
+   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   <!-- style css -->
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <!-- Responsive-->
+   <link rel="stylesheet" href="css/responsive.css">
+   <!-- fevicon -->
+   <link rel="icon" href="images/fevicon.png" type="image/gif" />
+   <!-- font css -->
+   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+   <!-- Scrollbar Custom CSS -->
+   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+   <!-- Tweaks for older IEs-->
+   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+</head>
+
+<body>
+   <div class="header_section header_bg">
+      <div class="container">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png " style="width: 80px;
   height: 80px;
   object-fit: cover;
   display: block;
   padding: 0;
   margin: 0;"></a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-auto">
-                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Home</a>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav ml-auto">
+                  <li class="nav-item ">
+                     <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="icecream.html">Icecream</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="services.html">Services</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+               </ul>
+               <!-- Cart Icon -->
+               <form class="form-inline my-2 my-lg-0">
+                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
+                     <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                  </svg>
+               </form>
+               <div id="cart" class="cart hidden">
+                  <ul id="cart-items"></ul>
+               </div>
+            </div>
+         </nav>
+      </div>
+   </div>
+   <!-- header section end -->
+   <!-- contact section start -->
+   <div class="contact_section layout_padding">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-4">
+               <div class="contact_main">
+                  <h1 style="width: 300px;" class="contact_taital">Hubungi Kami</h1>
+                  <form id="waForm">
+                     <div class="form-group">
+                        <input type="text" id="nama" class="email-bt" placeholder="Nama" name="Name">
+                     </div>
+                     <div class="form-group">
+                        <input type="text" id="asal" class="email-bt" placeholder="Asal" name="Asal">
+                     </div>
+                     <div class="form-group">
+                        <textarea id="pesan" class="massage-bt" placeholder="Pesan" rows="5" name="Massage"></textarea>
+                     </div>
+                  </form>
+                  <div class="main_bt">
+                     <a href="#" onclick="kirimWA()">Kirim</a>
+                  </div>
+               </div>
+            </div>
+            <div style="margin-top: 120px; padding-left: 60px;" class="col-md-8">
+               <div class="location_text">
+                  <ul>
+                     <li>
+                        <a href="https://www.google.com/maps/place/Fakultas+Pertanian+Universitas+Jember/@-8.1636614,113.716284,19z/data=!4m14!1m7!3m6!1s0x2dd6959efd82c2eb:0x2d7c8b77f29c0036!2sFakultas+Pertanian+Universitas+Jember!8m2!3d-8.1635795!4d113.7165695!16s%2Fg%2F11v9ggsbkp!3m5!1s0x2dd6959efd82c2eb:0x2d7c8b77f29c0036!8m2!3d-8.1635795!4d113.7165695!16s%2Fg%2F11v9ggsbkp?entry=ttu&g_ep=EgoyMDI1MDYwMS4wIKXMDSoASAFQAw%3D%3D"" target="
+                           _blank">
+                           <span class="padding_left_10 active"><i class="fa fa-map-marker"
+                                 aria-hidden="true"></i></span>jln. Kalimantan No. 37 – Kampus Tegalboto Kotak POS 159
+                           Jember, Jawa Timur</a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                     <li>
+                        <a href="https://wa.me/6281235296350" target="_blank">
+                           <span class="padding_left_10"><i class="fa fa-phone" aria-hidden="true"></i></span>Call : +62
+                           81235296350
+                        </a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="icecream.html">Icecream</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                     </li>
-                     <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                     <li>
+                        <a href="#">
+                           <span class="padding_left_10"><i class="fa fa-envelope" aria-hidden="true"></i></span>Email :
+                           cafetaria@gmail.com
+                        </a>
                      </li>
                   </ul>
-               </div>
-            </nav>
-         </div>
-      </div>
-      <!-- header section end -->
-      <!-- contact section start -->
-      <div class="contact_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-4">
-                  <div class="contact_main">
-                     <h1 style="width: 300px;" class="contact_taital">Hubungi Kami</h1>
-                     <form action="/action_page.php">
-                        <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Nama"name="Name">
-                        </div>
-                        <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="Asal" name="Name">
-                        </div>
-                        <div class="form-group">
-                           <input type="text" class="email-bt" placeholder="No.HP" name="Email">
-                        </div>
-                        <div class="form-group">
-                           <textarea class="massage-bt" placeholder="Pesan" rows="5" id="comment" name="Massage"></textarea>
-                        </div>
-                     </form>
-                     <div class="main_bt"><a href="#">Kirim</a></div>
-                  </div>
-               </div>
-               <div style="margin-top: 120px; padding-left: 60px;" class="col-md-8">
-                  <div class="location_text">
-                     <ul>
-                        <li>
-                           <a href="#">
-                           <span class="padding_left_10 active"><i class="fa fa-map-marker" aria-hidden="true"></i></span>jln. Kalimantan No. 37 – Kampus Tegalboto Kotak POS 159 Jember, Jawa Timur,</a>
-                        </li>
-                        <li>
-                           <a href="#">
-                           <span class="padding_left_10"><i class="fa fa-phone" aria-hidden="true"></i></span>Call : +62 81235296350
-                           </a>
-                        </li>
-                        <li>
-                           <a href="#">
-                           <span class="padding_left_10"><i class="fa fa-envelope" aria-hidden="true"></i></span>Email : cafetaria@gmail.com
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
-                  <div style="text-align: left;" class="footer_social_icon">
-                     <ul style="list-style: none; padding: 0; display: flex; gap: 10px;">
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                     </ul>
-                  </div>
-                  
                </div>
             </div>
          </div>
       </div>
-      <!-- contact section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
-         <div class="container">
-            <p class="copyright_text">© 2025 Cafetaria Jember. Desain oleh Free HTML Templates. Distribusi oleh ThemeWagon.
+   </div>
+   <!-- contact section end -->
+   <!-- copyright section start -->
+   <div class="copyright_section">
+      <div class="container">
+         <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
             </a></p>
-         </div>
       </div>
-      <!-- copyright section end -->
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
-      <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
-      <!-- javascript --> 
-   </body>
+   </div>
+   <!-- copyright section end -->
+   <!-- Javascript files-->
+   <script src="js/jquery.min.js"></script>
+   <script src="js/popper.min.js"></script>
+   <script src="js/bootstrap.bundle.min.js"></script>
+   <script src="js/jquery-3.0.0.min.js"></script>
+   <script src="js/plugin.js"></script>
+   <!-- sidebar -->
+   <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+   <script src="js/custom.js"></script>
+   <!-- javascript -->
+</body>
+<script>
+   function kirimWA() {
+      var nama = document.getElementById("nama").value.trim();
+      var asal = document.getElementById("asal").value.trim();
+      var pesan = document.getElementById("pesan").value.trim();
+
+      if (nama === "" || asal === "" || pesan === "") {
+         alert("Mohon isi semua kolom terlebih dahulu.");
+         return;
+      }
+
+      var nomor = "6281235296350";
+      var text = `Halo, saya ingin menghubungi:
+
+*Nama:* ${nama}
+*Asal:* ${asal}
+*Pesan:* ${pesan}`;
+
+      var encodedText = encodeURIComponent(text);
+
+      var waUrl = `https://wa.me/${nomor}?text=${encodedText}`;
+      window.open(waUrl, '_blank');
+   }
+</script>
+
 </html>
