--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                      <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="icecream.html">Tumbas</a>
+                     <a class="nav-link" href="icecream.html">Product</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
@@ -65,10 +65,18 @@
                      <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                </ul>
+               <!-- Cart Icon -->
                <form class="form-inline my-2 my-lg-0">
-                  <!-- <div class="login_bt"><a href="#">Login <span style="color: #222222;"><i class="fa fa-user" aria-hidden="true"></i></span></a></div> -->
-                  <div class="fa fa-search form-control-feedback"></div>
+                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
+                     <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                  </svg>
                </form>
+               <div id="cart" class="cart hidden">
+                  <ul id="cart-items"></ul>
+               </div>
+
             </div>
          </nav>
       </div>
@@ -187,7 +195,8 @@
                               <div class="cream_img"><img src="images/img-1.png"></div>
                               <div class="price_text">$10</div>
                               <h6 class="strawberry_text">Strawberry Ice Cream</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                              <div class="cart_bt"><a href="#" class="add-to-cart" data-name="Strawberry Ice Cream"
+                                    data-price="10">Add To Cart</a></div>
                            </div>
                         </div>
                         <div class="col-md-4">
@@ -236,7 +245,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="seemore_bt"><a href="#">See More</a></div>
+                  <div class="seemore_bt"><a href="icecream.html">See More</a></div>
                </div>
             </div>
             <!-- cream sectuion end -->
@@ -343,61 +352,46 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="contact_main">
-                           <h1 class="contact_taital">Contact Us</h1>
+                           <h1 style="width: 300px;" class="contact_taital">Hubungi Kami</h1>
                            <form action="/action_page.php">
                               <div class="form-group">
-                                 <input type="text" class="email-bt" placeholder="Name" name="Name">
+                                 <input type="text" class="email-bt" placeholder="Nama" name="Name">
                               </div>
                               <div class="form-group">
-                                 <input type="text" class="email-bt" placeholder="Email" name="Name">
+                                 <input type="text" class="email-bt" placeholder="Asal" name="Name">
                               </div>
                               <div class="form-group">
-                                 <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
+                                 <input type="text" class="email-bt" placeholder="No.HP" name="Email">
                               </div>
                               <div class="form-group">
-                                 <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
+                                 <textarea class="massage-bt" placeholder="Pesan" rows="5" id="comment"
                                     name="Massage"></textarea>
                               </div>
                            </form>
-                           <div class="main_bt"><a href="#">SEND</a></div>
+                           <div class="main_bt"><a href="#">Kirim</a></div>
                         </div>
                      </div>
-                     <div class="col-md-8">
+                     <div style="margin-top: 120px; padding-left: 60px;" class="col-md-8">
                         <div class="location_text">
                            <ul>
                               <li>
                                  <a href="#">
                                     <span class="padding_left_10 active"><i class="fa fa-map-marker"
-                                          aria-hidden="true"></i></span>Making this the first true</a>
+                                          aria-hidden="true"></i></span>jln. Kalimantan No. 37 – Kampus Tegalboto Kotak
+                                    POS 159 Jember, Jawa Timur,</a>
                               </li>
                               <li>
                                  <a href="#">
                                     <span class="padding_left_10"><i class="fa fa-phone"
-                                          aria-hidden="true"></i></span>Call : +01 1234567890
+                                          aria-hidden="true"></i></span>Call : +62 81235296350
                                  </a>
                               </li>
                               <li>
                                  <a href="#">
                                     <span class="padding_left_10"><i class="fa fa-envelope"
-                                          aria-hidden="true"></i></span>Email : demo@gmail.com
+                                          aria-hidden="true"></i></span>Email : cafetaria@gmail.com
                                  </a>
                               </li>
-                           </ul>
-                        </div>
-                        <div class="mail_main">
-                           <h3 class="newsletter_text">Newsletter</h3>
-                           <div class="form-group">
-                              <textarea class="update_mail" placeholder="Enter Your Email" rows="5" id="comment"
-                                 name="Enter Your Email"></textarea>
-                              <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-                           </div>
-                        </div>
-                        <div class="footer_social_icon">
-                           <ul>
-                              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                            </ul>
                         </div>
                      </div>
@@ -408,8 +402,8 @@
             <!-- copyright section start -->
             <div class="copyright_section">
                <div class="container">
-                  <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html
-                        Templates</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></p>
+                  <p class="copyright_text">2025 All Rights Reserved. Design by <a href="https://html.design">Darah
+                        Teguh</a> and my partner Refangg,Varlandd,Firdatok</p>
                </div>
             </div>
             <!-- copyright section end -->
