--- a/services.html
+++ b/services.html
@@ -80,52 +80,47 @@
          </nav>
       </div>
    </div>
-   <!-- header section end -->
-   <!-- services section start -->
    <div class="services_section layout_padding bg-light">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-12 text-center">
-               <h1 class="services_taital">Services</h1>
-               <p class="services_text">Kami menyediakan layanan pre-order untuk berbagai makanan dan minuman lezat,
-                  cocok untuk kebutuhan harian dan acara spesial.</p>
-            </div>
-         </div>
-         <div class="row mt-4">
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-cutlery" aria-hidden="true"></i>
-                  </div>
-                  <h4>Paket Makanan Harian</h4>
-                  <p>Tersedia paket lengkap nasi, lauk, dan sayur yang bisa dipesan rutin untuk pelajar dan karyawan.
-                  </p>
-               </div>
-            </div>
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-coffee" aria-hidden="true"></i>
-                  </div>
-                  <h4>Minuman Kekinian</h4>
-                  <p>Dari kopi susu, boba, es teh segar, hingga jus buah – semua tersedia dengan bahan segar.</p>
-               </div>
-            </div>
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-gift" aria-hidden="true"></i>
-                  </div>
-                  <h4>Catering & Custom Order</h4>
-                  <p>Layanan pemesanan makanan untuk acara sekolah, rapat, atau kebutuhan khusus lainnya.</p>
-               </div>
-            </div>
-         </div>
-         <div class="text-center mt-4">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-12 text-center">
+            <h1 class="services_taital">Services</h1>
+            <p class="services_text">Kami menyediakan layanan pre-order untuk berbagai makanan dan minuman lezat, cocok untuk kebutuhan harian dan acara spesial.</p>
          </div>
       </div>
+      <div class="row mt-4">
+         <div class="col-md-4">
+            <div class="service_card">
+               <div class="icon_circle">
+                  <i class="fa fa-cutlery" aria-hidden="true"></i>
+               </div>
+               <h4>Paket Makanan Harian</h4>
+               <p>Tersedia paket lengkap nasi, lauk, dan sayur yang bisa dipesan rutin untuk pelajar dan karyawan.</p>
+            </div>
+         </div>
+         <div class="col-md-4">
+            <div class="service_card">
+               <div class="icon_circle">
+                  <i class="fa fa-coffee" aria-hidden="true"></i>
+               </div>
+               <h4>Minuman Kekinian</h4>
+               <p>Dari kopi susu, boba, es teh segar, hingga jus buah – semua tersedia dengan bahan segar.</p>
+            </div>
+         </div>
+         <div class="col-md-4">
+            <div class="service_card">
+               <div class="icon_circle">
+                  <i class="fa fa-gift" aria-hidden="true"></i>
+               </div>
+               <h4>Catering & Custom Order</h4>
+               <p>Layanan pemesanan makanan untuk acara sekolah, rapat, atau kebutuhan khusus lainnya.</p>
+            </div>
+         </div>
+      </div>
+      <div class="text-center mt-4">
+      </div>
    </div>
-
+</div>
 
    </div>
    <!-- services section end -->
