--- a/blog.html
+++ b/blog.html
@@ -135,10 +135,10 @@
    </div>
    <!-- testimonial section end -->
    <!-- copyright section start -->
-   <div class="copyright_section">
+  <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html
-               Templates</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></p>
+         <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
+            </a></p>
       </div>
    </div>
    <!-- copyright section end -->
