--- a/icecream.html
+++ b/icecream.html
@@ -199,10 +199,10 @@
    </div>
    <!-- cream sectuion end -->
    <!-- copyright section start -->
-   <div class="copyright_section margin_top90">
+   <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html
-               Templates</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></p>
+         <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
+            </a></p>
       </div>
    </div>
    <!-- copyright section end -->
