--- a/services.html
+++ b/services.html
@@ -82,58 +82,53 @@
    </div>
    <!-- header section end -->
    <!-- services section start -->
-   <div class="services_section layout_padding bg-light">
+   <div class="services_section layout_padding">
       <div class="container">
          <div class="row">
-            <div class="col-md-12 text-center">
-               <h1 class="services_taital">Services</h1>
-               <p class="services_text">Kami menyediakan layanan pre-order untuk berbagai makanan dan minuman lezat,
+            <div class="col-md-12">
+               <h1 class="services_taital">Our Cafetaria Services</h1>
+               <p class="services_text">Kami menyediakan layanan pre-order untuk berbagai makanan dan minuman lezat,<br>
                   cocok untuk kebutuhan harian dan acara spesial.</p>
             </div>
          </div>
-         <div class="row mt-4">
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-cutlery" aria-hidden="true"></i>
+         <div class="services_section_2">
+            <div class="row">
+               <div class="col-md-4">
+                  <div class="services_box">
+                     <h5 class="tasty_text"><span class="icon_img"><img src="images/icon-1.png"></span>Paket Makanan
+                        Harian
+                     </h5>
+                     <p class="lorem_text">Tersedia paket lengkap nasi, lauk, dan sayur yang bisa dipesan rutin untuk
+                        pelajar dan karyawan.</p>
                   </div>
-                  <h4>Paket Makanan Harian</h4>
-                  <p>Tersedia paket lengkap nasi, lauk, dan sayur yang bisa dipesan rutin untuk pelajar dan karyawan.
-                  </p>
+               </div>
+               <div class="col-md-4">
+                  <div class="services_box">
+                     <h5 class="tasty_text"><span class="icon_img"><img src="images/icon-2.png"></span>Minuman Kekinian
+                     </h5>
+                     <p class="lorem_text">kopi susu, boba, es teh segar, hingga jus buah – semua tersedia dengan bahan
+                        segar. </p>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div class="services_box">
+                     <h5 class="tasty_text"><span class="icon_img"><img src="images/icon-1.png"></span>Catering & Custom
+                        Order
+                     </h5>
+                     <p class="lorem_text">Layanan pemesanan makanan untuk acara sekolah, rapat, atau kebutuhan khusus
+                        lainnya.</p>
+                  </div>
                </div>
             </div>
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-coffee" aria-hidden="true"></i>
-                  </div>
-                  <h4>Minuman Kekinian</h4>
-                  <p>Dari kopi susu, boba, es teh segar, hingga jus buah – semua tersedia dengan bahan segar.</p>
-               </div>
-            </div>
-            <div class="col-md-4">
-               <div class="service_card">
-                  <div class="icon_circle">
-                     <i class="fa fa-gift" aria-hidden="true"></i>
-                  </div>
-                  <h4>Catering & Custom Order</h4>
-                  <p>Layanan pemesanan makanan untuk acara sekolah, rapat, atau kebutuhan khusus lainnya.</p>
-               </div>
-            </div>
-         </div>
-         <div class="text-center mt-4">
          </div>
       </div>
    </div>
-
-
-   </div>
    <!-- services section end -->
    <!-- copyright section start -->
-   <div class="copyright_section margin_top90">
+   <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free Html
-               Templates</a> Distribution by <a href="https://themewagon.com">ThemeWagon</a></p>
+         <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
+            </a></p>
       </div>
    </div>
    <!-- copyright section end -->
